# CDE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  C23_MODERNIZATION.md  CHANGELOG.md  FFI_SAFETY.md  FUZZING.md  PHASE_1_2_COMPLETION.md  README.md  RUST_MIGRATION_PLAN.md  SANITIZERS.md  XDR_CODEC_REPLACEMENT_PLAN.md  check_headers.py  configure.ac  fix_all_headers.py  fix_command.py  fix_encaps.py  fuzz_all.sh  meson.build  meson_options.txt  verify_libcsa.py  y.tab.c  y.tab.h
cde/: Cargo.toml  meson.build  test_prog.x  test_struct.x
cde/.cargo/: audit.toml
cde/include/: meson.build
cde/include/Dt/: ActionUtilP.h  CanvasSegP.h  DtHash.h  DtosP.h  EnvControlP.h  GetDispRes.h  HashP.h  Help.h  HourGlass.h  Mmdb.h  PsubUtilI.h  SafeStr.h  Search.h  SharedProcs.h  UserMsg.h  View.h  WsmP.h  ll.h  meson.build  proto.h  task.h  vista.h
cde/include/DtI/: AccessI.h  CallbacksI.h  DisplayAreaI.h  DisplayAreaP.h  XUICreateI.h  bufioI.h
cde/include/SPC/: spcP.h
cde/include/bms/: MemoryMgr.h  SbEvent.h  Symbolic.h  XeUserMsg.h  bms.h  connect.h  pathwexp.h  spc.h  stringbuf.h  usersig.h
cde/include/codelibs/: pathutils.h  shellutils.h
cde/lib/: meson.build
cde/lib/DtHelp/: Access.c  AccessCCDFI.h  AccessSDL.c  AccessSDLI.h  AccessSDLP.h  Actions.c  Callbacks.c  Canvas.c  CanvasEnums.h  CanvasOs.c  CanvasOsI.h  CanvasStubs.c  CleanUp.c  CleanUpI.h  Destroy.c  DestroyI.h  FormatCCDF.c  FormatI.h  FormatMarkdown.c  FormatSDL.c  FormatSDLI.h  FormatTerm.c  FormatUtilI.h  GenUtils.c  Graphics.c  HelpAccessI.h  HelpDialog.c  HelpDialogI.h  HelpQuickD.c  HelpQuickDI.h  HyperText.c  LinkMgr.c  LinkMgrI.h  Obsolete.c  Resize.c  SDLI.h  Selection.c  SetList.c  UtilSDL.c  UtilSDLI.h  (+7 more)
cde/lib/DtMmdb/: meson.build
cde/lib/DtMrm/: DtMrm.c
cde/lib/DtPrint/: PrintSetupB.c  meson.build
cde/lib/DtSearch/: ausexit.c  boolpars.c  dtoe.c  dtoeinit.c  dtsrapi.c  dtsrjoint.c  hilite.c  meson.build  msgutil.c  ocf.c
cde/lib/DtSvc/: meson.build
cde/lib/DtTerm/: meson.build
cde/lib/DtWidget/: ComboBox.c  Editor.c  View.c  meson.build
cde/lib/csa/: agent.c  api.c  appt4.h  attr.c  calendar.c  cmxdr.c  connection.c  convert4-5.c  hash.h  lutil.c  match.c  meson.build  reparser_compat.c  rescan.c  rpccalls.c  rust_dispatch.h  xtclient.c
cde/lib/tt/: meson.build
cde/programs/: meson.build
cde/programs/backdrops/: meson.build
cde/programs/dtaction/: Main.c  meson.build
cde/programs/dtbrowser/: meson.build
cde/programs/dtcalc/: calctool.c  calctool.h  ds_widget.h  meson.build  motif.c
cde/programs/dtcm/: meson.build
cde/programs/dtconfig/: dtconfig.sh  meson.build
cde/programs/dtcreate/: FileCharacteristics.h  af_aux.h  ca_aux.h  cmncbs.c  cmnrtns.h  icon_selection_dialog.c  icon_selection_dialog.h  main.c  meson.build
cde/programs/dtdbcache/: meson.build
cde/programs/dtdialog/: dtdialog.c  meson.build
cde/programs/dtdspmsg/: meson.build
cde/programs/dtexec/: Main.c  meson.build
cde/programs/dtfile/: ChangeDir.c  ChangeDir.h  Command.c  Desktop.c  Desktop.h  Directory.c  Encaps.c  Encaps.h  File.c  FileDialog.c  FileManip.c  FileMgr.c  FileMgr.h  FileOp.c  Filter.c  Find.c  Help.c  IconWindow.c  Main.c  Main.h  Menu.c  MkDir.c  ModAttr.c  MultiView.c  MultiView.h  Prefs.c  SharedProcs.c  Trash.c  fsDialog.c  meson.build
cde/programs/dthello/: dthello.c  meson.build
cde/programs/dthelp/: meson.build
cde/programs/dticon/: event.h  fileIO.c  fileIO.h  fileIODialog.c  graphics.c  main.c  meson.build  utils.c
cde/programs/dtimsstart/: action.c  env.c  file.c  main.c  meson.build  remote.c  select.c  start.c  win.c  xims.h  ximsfunc.h
cde/programs/dtlogin/: Wrap.h  access.c  auth.c  choose.c  chooser.c  daemon.c  dm.c  dm.h  dpylist.c  error.c  genauth.c  meson.build  pam_svc.c  pam_svc.h  policy.c  reset.c  server.c  session.c  socket.c  solaris.c  sysauth.c  util.c  vg.h  vgcallback.c  vglang.c  vgmain.c  vgmodules.c  vgutil.c  xdmcp.c
cde/programs/dtmail/: meson.build
cde/programs/dtpad/: dtpad.h  fileCB.c  fileDlg.c  fileIo.c  main.c  meson.build  printJob.c  printOutput.c  ttMsgSupport.c
cde/programs/dtpdm/: Main.c  MainWindow.c  PdmOid.h  PdmXp.c  PrinterBox.c  meson.build
cde/programs/dtpdmd/: dtpdmdP.h  manager.c  meson.build
cde/programs/dtprintegrate/: meson.build
cde/programs/dtprintinfo/: DtPrintinfo.cpp  meson.build
cde/programs/dtscreen/: dtscreen.c  dtscreen.h  meson.build  pyro.c  resource.c  rotor.c
cde/programs/dtsearchpath/: meson.build
cde/programs/dtsession/: SmAuth.h  SmCommun.c  SmGlobals.c  SmGlobals.h  SmHftRing.c  SmLock.c  SmMain.c  SmRestore.c  SmSave.c  SmUI.c  SmWatch.c  SmWindow.c  SmXSMP.c  SmXSMP.h  SrvMain.c  SrvPalette.c  meson.build
cde/programs/dtspcd/: meson.build  spcd_event.h
cde/programs/dtstyle/: ColorMain.c  Main.c  meson.build
cde/programs/dtterm_shim/: Cargo.toml  meson.build
cde/programs/dtwm/: Callback.c  Clock.c  ClockP.h  Session.c  UI.c  WmCPlace.c  WmEvent.c  WmFunction.c  WmGlobal.h  WmInitWs.c  WmMain.c  WmManage.h  WmMenu.c  WmParse.h  WmResCvt.c  WmResParse.c  WmResParse.h  WmResource.c  WmWinConf.c  meson.build
cde/programs/dtxdgbridge/: Cargo.toml
cde/programs/types/: meson.build
cde/scripts/: rust-ci.sh
contrib/: meson.build
programs/dtappintegrate/: meson.build
programs/dtdocbook/: meson.build
programs/dtdocbook/infolib/: AttributeData.cpp  AttributeData.hpp  AttributeList.cpp  AttributeList.hpp  AttributeRec.cpp  AttributeRec.hpp  AttributeStore.cpp  AttributeStore.hpp  AusText.cpp  AusText.hpp  AusTextStorage.cpp  BTCollectable.cpp  BaseDataCollect.hpp  BookCaseDB.cpp  BookCaseDB.hpp  BookTasks.cpp  BookTasks.hpp  ConcatTask.cpp  ConcatTask.hpp  Content.cpp  Content.hpp  ContentRec.hpp  ContentType.ll  DataBase.cpp  (+68 more)
programs/dtopen/: make_dtopen_links.sh  meson.build
programs/dtsr/: meson.build
programs/dtudcexch/: excutil.h  exportbdf.c  getbdffn.c  importbdf.c  meson.build  selectx.c  udcexc.c  udcexp.c  udcimp.c
programs/dtudcfonted/: code.c  comsub.c  cpyw.c  cpyx.c  meson.build  mtfgui.c  selectx.c  ufont.c  util.c  util.h
(+3772 files in other folders)
