# CDE Rust migration — workspace root
#
# This workspace unifies all Rust crates in the CDE migration under a single
# dependency resolver and lock file.  Benefits:
#   • cargo build --workspace  — builds all crates together
#   • cargo test  --workspace  — runs all test suites
#   • cargo audit --workspace  — single CVE scan across all dependencies
#   • cargo clippy --workspace — unified lint pass
#
# The fuzz crate (cde_xdr/fuzz/) is intentionally excluded because cargo-fuzz
# requires its own workspace root.

[workspace]
resolver = "2"
members = [
    "lib/DtHelp/rust",
    "lib/DtHelp/rust/engine",
    "lib/DtHelp/rust/sgml2md",
    "lib/DtSearch/rust",
    "lib/DtSvc/rust",
    "lib/csa/cde_xdr",
    "lib/csa/recurrence",
    "lib/csa/rust",
    "lib/tt/libtt_shim",
    "lib/tt/rust/tt_type_comp",
    "lib/tt/rust/ttsession",
    "programs/dtappbuilder/rust",
    "programs/dtbrowser/ipc",
    "programs/dtbrowser/server",
    "programs/dtterm_shim",
    "programs/dtwm/rust",
    "programs/dtxdgbridge",
]
exclude = [
    # cargo-fuzz must operate in its own workspace
    "lib/csa/cde_xdr/fuzz",
    "lib/tt/libtt_shim/fuzz",
    "lib/DtSearch/rust/fuzz",
]

# ---------------------------------------------------------------------------
# Shared dependency versions
#
# Crates opt in to these by writing `dep.workspace = true` in their own
# Cargo.toml.  Pinning here ensures every crate in the workspace uses the same
# version, preventing duplicate transitive copies and audit blind-spots.
# ---------------------------------------------------------------------------
[workspace.dependencies]
anyhow      = "1.0"
byteorder   = "1.5"
cbindgen    = "0.29"
clap        = { version = "4.6", features = ["derive"] }
env_logger  = "0.11"
futures     = "0.3"
libc        = "0.2"
log         = "0.4"
miette      = { version = "7", features = ["fancy"] }
nom         = "8.0"
pest        = "2.8"
pest_derive = "2.8"
rayon       = "1.12"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
tokio       = { version = "1.52", features = ["full"] }
walkdir     = "2"
zbus        = "5"

# Workspace-level profile tuning
[profile.dev]
# Keep debug info for all crates; useful for FFI debugging with gdb/lldb.
debug = true

[profile.release]
# Keep symbols for CDE native library debugging; LTO is opt-in per crate.
strip = false
lto   = false

# ---------------------------------------------------------------------------
# Sanitizer profiles — enable via RUSTFLAGS environment variable
#
# AddressSanitizer (ASan): detects memory errors (use-after-free, buffer overflow,
# memory leaks, double-free, etc). Requires `cargo +nightly`.
#
# UndefinedBehaviorSanitizer (UBSan): detects undefined behavior (integer
# overflow, misaligned pointers, out-of-bounds shifts, etc).
# Requires `cargo +nightly`.
#
# Build instructions:
#   cargo +nightly build --workspace -Z build-std --target x86_64-unknown-linux-gnu
#   RUSTFLAGS="-Z sanitizer=address" cargo +nightly build --workspace
#   RUSTFLAGS="-Z sanitizer=undefined" cargo +nightly build --workspace
# ---------------------------------------------------------------------------
[profile.asan]
inherits = "dev"
opt-level = 1
lto = false

[profile.ubsan]
inherits = "dev"
opt-level = 1
lto = false
