subdir('dtterm_shim')
subdir('dtwm')
subdir('dtdialog')
subdir('dtaction')
subdir('dtexec')
subdir('dthello')
subdir('dtdbcache')
subdir('dtscreen')
subdir('dtcreate')
subdir('dtspcd') # System Service
subdir('dtsearchpath') # Core Utility

subdir('dtlogin')
subdir('dtsession')
subdir('dtfile')
subdir('dtconfig')
subdir('dtstyle')
subdir('dtmail') # Priority 3 Application
subdir('dtprintinfo')
subdir('dtpdm')
subdir('dtpdmd')
subdir('dtprintegrate')

subdir('dtimsstart')
subdir('dtdspmsg')

subdir('backdrops')
subdir('types')

subdir('dtbrowser') # CEF-based replacement for dtinfo

subdir('dtcalc')
subdir('dticon')
subdir('dtpad')
subdir('dthelp')
subdir('dtcm')
subdir('dtappbuilder')
